# sgx-encrypt

./: Cargo.toml  README.md  README.tpl  build.rs
.cargo/: config.toml
src/: ecalls.rs  ffi.rs  keyrequest.rs  lib.rs  sgx_cipher.rs  trts_pic.S  trts_pic.h
