[package]
name = "sgx-keyreq"
version = "0.2.0"
resolver = "2"
edition = "2018"
authors = ["Julian Popescu <jpopesculian@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/riddleandcode/sgx-keyreq"
documentation = "https://docs.rs/sgx-keyreq/"
repository = "https://github.com/riddleandcode/sgx-keyreq"
description = "Provides a stable/no-std compatible library for requesting SGX keys"
keywords = ["sgx", "encryption", "key", "cryptography", "trusted"]
categories = ["cryptography", "no-std"]

[features]
default = ["std"]
std = []

[dependencies]
sgx-isa = "0.3.3"

[build-dependencies]
cc = "1.0.71"

[dev-dependencies]
rand = "0.8.4"
rdrand = "0.8.1"
